# oomph-lib

./: .bumpversion.cfg  .clang-format  .clang-tidy  .cmake-format.json  .cmake-format.py  .codecov.yml  .cpack_ignore  .gitignore  .pre-commit-config.yaml  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMAKE_NOTES.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  ChangeLog  INSTALL  INSTALL.md  LICENCE  Makefile  Makefile.am  NEWS  README  README.md  TODO-LIST.md  autogen.sh  build_script.bash  configure.ac  cpp_files.txt  interactive_autogen.sh  non_interactive_autogen.sh  oomph_build.py  validate.sh  website.gitignore
benchmark/: CMakeLists.txt
benchmark/generic/: CMakeLists.txt  benchmark_Vector.cc
benchmark/utilities/: CMakeLists.txt  benchmark_string.cc
demo_drivers/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  add_project_calls.py  async_self_test.py  index.html  oomph_generate_cmake_script_add_test.py  parallel_self_test.py  run_selected_tests.bash  run_tests.bash  update_find_package_calls.sh  update_libs.py
demo_drivers/FAQ/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  broken_this_demo.cc  customising_output.cc  index.html  validate.sh
demo_drivers/advection_diffusion/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/all_foeppl_von_karman/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  axisym_displ_based_fvk.cc  axisym_fvk.cc  circular_disk.cc  compare_u_r.lay  compare_w.lay  displacement_based_circular_disk.cc  index.html  run_all_versions.bash  validate.sh
demo_drivers/axisym_advection_diffusion/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/axisym_displ_based_foeppl_von_karman/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  axisym_displ_based_fvk.cc  index.html  validate.sh
demo_drivers/axisym_foeppl_von_karman/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  axisym_fvk.cc  index.html  validate.sh
demo_drivers/axisym_linear_elasticity/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/axisym_navier_stokes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/axisym_poroelasticity/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/beam/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/bifurcation_tracking/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  adaptive_hopf.cc  adaptive_hopf_with_separate_meshes.cc  adaptive_pitchfork.cc  fold.cc  hopf.cc  index.html  periodic_orbit.cc  pitchfork.cc  track_pitch.cc  validate.sh
demo_drivers/biharmonic/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/darcy/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/eigenproblems/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/extrude_quad_mesh_to_cube_mesh/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  extrude_triangle_generated_mesh.cc  extrude_with_macro_element_representation.cc  index.html  validate.sh
demo_drivers/flux_transport/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/foeppl_von_karman/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/fourier_decomposed_helmholtz/: CMakeLists.txt  Makefile  Makefile.in  index.html
demo_drivers/generalised_newtonian_axisym_navier_stokes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/generalised_newtonian_navier_stokes/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/generalised_time_harmonic_linear_elasticity/: Makefile.am  time_harmonic_elasticity_driver.cc  time_harmonic_elasticity_driver_source.cc  validate.sh
demo_drivers/gzip/: CMakeLists.txt  index.html
demo_drivers/heat_transfer_and_melting/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/helmholtz/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/homogenisation/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index.html
demo_drivers/integral/: Makefile.am
demo_drivers/interaction/: CMakeLists.txt  Makefile  Makefile.am  (+2 more)
doc/: CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  doc.txt  doc.txt_doxygenified.h  navbar_toggle.js  oomph-lib_footer.html  oomph-lib_footer.html.template  oomph-lib_header.html  oomph-lib_header.html.template  oomph_generate_doc_cmake_script.py  oomph_header.css
external_distributions/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile.am  README.md
external_src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  parmetis.h
scripts/: CMakeLists.txt  Makefile.am  apply_licence.sh  autogen_helpers.sh  big_diff.bash  build_demo.bash  build_mesh_makefile.sh  bump_doc_txt.bash  cc_and_h_licence_block.txt  change_urls.bash  check-makefile-subdirs.py  check_for_dynamic_linking_flag.bash  check_if_executable_exists.bash  check_links_in_example_list.py  check_mpi_command.sh  check_oomph-lib_links.bash  compare_file_length_with_tolerance.bash  customise_latex.bash  destruct_test_distribution.bash  docs_spelling.bash  emacs_files_that_contain_string.bash  extract_free_mem_from_top_trace.bash  filter_cmake_tests.py  find_compilation_failures_for_demo_drivers.bash  find_dodgy_booleans.bash  find_errors_and_warnings_in_build_log.bash  find_failed_directories.bash  find_missing_doxygen_hooks.sh  fix_broken_doxygen_formulae.py  fpdiff.py  fpsmall.py  get_external_distribution_tar_files.bash  headers.awk  how_to_build_and_test_example.bash  install_cmake.sh  make_all_distributions.bash  make_combined_pvd.bash  make_index.py  make_index_html_in_demo_driver_dirs.bash  meld_against_files_in_different_dir.bash  (+23 more)
self_test/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
tests/: CMakeLists.txt
user_drivers/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
user_src/: Makefile  Makefile.am  Makefile.in
(+30193 files in other folders)
